--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="HtmlAgilityPack" version="1.4.6" targetFramework="net452" />
   <package id="Nito.AsyncEx" version="3.0.0" targetFramework="net452" />
   <package id="RabbitMQ.Client" version="3.2.1" targetFramework="net452" />
 </packages>
